diesel_compile_tests/tests/fail/mysql_does_not_support_window_functions_with_exclusion.stderr
error[E0277]: `ExcludeGroup` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_window_functions_with_exclusion.rs:22:22
   |
22 |         .load::<i64>(&mut connection)
   |          ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoFrameFrameExclusionSupport>` is not implemented for `ExcludeGroup`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `ExcludeGroup` implements `QueryFragment<DB, FrameExclusionSupport>`
             `ExcludeGroup` implements `QueryFragment<DB>`
   = note: required for `ExcludeGroup` to implement `QueryFragment<Mysql>`
   = note: 7 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeGroup>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeGroup>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`

error[E0277]: `ExcludeCurrentRow` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_window_functions_with_exclusion.rs:33:26
   |
33 |             .load::<i64>(&mut connection)
   |              ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoFrameFrameExclusionSupport>` is not implemented for `ExcludeCurrentRow`
   |              |
   |              required by a bound introduced by this call
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `ExcludeCurrentRow` implements `QueryFragment<DB, FrameExclusionSupport>`
             `ExcludeCurrentRow` implements `QueryFragment<DB>`
   = note: required for `ExcludeCurrentRow` to implement `QueryFragment<Mysql>`
   = note: 7 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeCurrentRow>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeCurrentRow>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`

error[E0277]: `ExcludeTies` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_window_functions_with_exclusion.rs:43:22
   |
43 |         .load::<i64>(&mut connection)
   |          ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoFrameFrameExclusionSupport>` is not implemented for `ExcludeTies`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `ExcludeTies` implements `QueryFragment<DB, FrameExclusionSupport>`
             `ExcludeTies` implements `QueryFragment<DB>`
   = note: required for `ExcludeTies` to implement `QueryFragment<Mysql>`
   = note: 7 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeTies>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeTies>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`

error[E0277]: `ExcludeNoOthers` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_window_functions_with_exclusion.rs:54:26
   |
54 |             .load::<i64>(&mut connection)
   |              ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoFrameFrameExclusionSupport>` is not implemented for `ExcludeNoOthers`
   |              |
   |              required by a bound introduced by this call
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `ExcludeNoOthers` implements `QueryFragment<DB, FrameExclusionSupport>`
             `ExcludeNoOthers` implements `QueryFragment<DB>`
   = note: required for `ExcludeNoOthers` to implement `QueryFragment<Mysql>`
   = note: 7 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeNoOthers>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeNoOthers>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
